--- a/front/BrefcaseFront/src/app/layouts/layout/layout.component.html
+++ b/front/BrefcaseFront/src/app/layouts/layout/layout.component.html
@@ -11,3 +11,4 @@
         <ng-content select="app-layout-footer"></ng-content>
     </div>
 </div>
+<app-loading-screen [isVisible]="isLoadingScreen"></app-loading-screen>
