--- a/front/BrefcaseFront/src/app/layouts/parts/layout-header/layout-header.component.html
+++ b/front/BrefcaseFront/src/app/layouts/parts/layout-header/layout-header.component.html
@@ -10,9 +10,9 @@
                 <ng-content select="app-layout-header-center"></ng-content>
             </div>
         </td>
-        <td class="td-rigth">
-            <div class="layout-header-rigth">
-                <ng-content select="app-layout-header-rigth"></ng-content>
+        <td class="td-right">
+            <div class="layout-header-right">
+                <ng-content select="app-layout-header-right"></ng-content>
             </div>
         </td>
     </table>
