--- a/front/BrefcaseFront/src/app/pages/test-screen/test-screen.component.html
+++ b/front/BrefcaseFront/src/app/pages/test-screen/test-screen.component.html
@@ -1,16 +1,9 @@
-<app-layout [isDarkness]="false">
+<app-layout [isDarkness]="false" [isLoadingScreen]="isLoadingScreen">
     <app-layout-header>
         <app-layout-header-left></app-layout-header-left>
         <app-layout-header-center></app-layout-header-center>
-        <app-layout-header-rigth></app-layout-header-rigth>
+        <app-layout-header-right></app-layout-header-right>
     </app-layout-header>
-    <app-layout-body>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <p>Fin de Pagina</p>
-    </app-layout-body>
-    <app-layout-footer>
-
-    </app-layout-footer>
+    <app-layout-body></app-layout-body>
+    <app-layout-footer></app-layout-footer>
 </app-layout>
