--- a/front/BrefcaseFront/src/app/layouts/parts/layout-header/layout-header.component.scss
+++ b/front/BrefcaseFront/src/app/layouts/parts/layout-header/layout-header.component.scss
@@ -7,7 +7,7 @@
         width: 100%;
         height: 100%;
 
-        td { height: 100%; }
+        td { height: 100%; position: relative; }
         .td-left, .td-right { min-width: 120px; }
         .td-center { width: 100%; min-width: 200px; }
     }
@@ -22,6 +22,9 @@
         margin-left: 5px;
         margin-right: 5px;
         align-items: center;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 
     .layout-header-left { justify-content: left; }
