--- a/front/BrefcaseFront/src/app/layouts/parts/layout-header-banner/layout-header-banner.component.html
+++ b/front/BrefcaseFront/src/app/layouts/parts/layout-header-banner/layout-header-banner.component.html
@@ -1,1 +1,5 @@
-<p>layout-header-banner works!</p>
+<div class="banner">
+    <app-image [width]="35"></app-image>
+    <h1>Brefcase</h1>
+    <app-image [width]="35"></app-image>
+</div>
