--- a/front/BrefcaseFront/src/app/pages/home-screen/home-screen.component.html
+++ b/front/BrefcaseFront/src/app/pages/home-screen/home-screen.component.html
@@ -1,1 +1,5 @@
-<app-layout></app-layout>
+<app-layout>
+    <app-layout-body>
+        <app-link [label]="'Test Screen'" [addressRedirect]="'/TestScreen'"></app-link>
+    </app-layout-body>
+</app-layout>
