--- a/front/BrefcaseFront/src/app/layouts/layout/layout.component.scss
+++ b/front/BrefcaseFront/src/app/layouts/layout/layout.component.scss
@@ -54,6 +54,34 @@
         width: calc(100% - 5px);
         height: 50px;
         bottom: 0;
+
+        table {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            
+
+            .td-footer {
+                padding-right: 5px;
+                padding-left: 5px;
+                width: 100%;
+            }
+
+            .td-checkbox {
+                padding-right: 5px;
+                padding-left: 5px;
+            }
+            
+            td {
+                div {
+                    width: calc(100% - 10px);
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                }
+            }
+        }
     }
 }
 
