--- a/front/BrefcaseFront/src/app/components/link/link.component.html
+++ b/front/BrefcaseFront/src/app/components/link/link.component.html
@@ -1,4 +1,4 @@
-<div class="link">
+<div #link class="link">
     <div class="image">
         <ng-content select="app-icon"></ng-content>
         <ng-content select="app-graphic"></ng-content>
