--- a/front/BrefcaseFront/src/app/layouts/parts/layout-header-left/layout-header-left.component.html
+++ b/front/BrefcaseFront/src/app/layouts/parts/layout-header-left/layout-header-left.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="isDefault">
     <app-link *ngIf="isLink"
+        [isDarkness]="isDarkness"
         [label]="isDefaultBackButton ? 'Back' : defaultLabel"
         [isSeparatorEnable]="true"
         [addressRedirect]="defaultLinkRedirect">
